Massive Code Cleanup
- Add Missing `@NotNull` / `@Nullable` annotations
- Utilize JDK 21 Features on `1_20_R4`
- Change Visibility when Necessary
- Purge Unused Fields/Methods
- Other Various Code-cleanup Tactics